<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/constrain"
        app:layout_constraintTop_toTopOf="parent">



        <View
            android:id="@+id/layoutDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/bg_view_card_data"
            android:id="@+id/layoutActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutDivider">

            <TextView
                android:id="@+id/textTime2"
                style="@style/whiteText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="start|center"
                android:text="Latest 20 Styles/Purchase Order (PO,Page 1 Of 2)"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView

                style="@style/whiteText"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:paddingEnd="10dp"
                android:text="@string/active_style"
                android:textSize="@dimen/_10ssp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutRecyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_header_data"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/layoutActivity">

            <TextView

                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="#"
                android:textSize="@dimen/_9ssp" />

            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="BUYER"
                android:textSize="@dimen/_9ssp" />

            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/style"
                android:textSize="@dimen/_9ssp" />

            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="PO"
                android:textSize="@dimen/_9ssp" />


            <TextView

                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/color"
                android:textSize="@dimen/_9ssp" />

            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/line_in"
                android:textSize="@dimen/_9ssp" />

            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/line_out"
                android:textSize="@dimen/_9ssp" />


            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reject"
                android:textSize="@dimen/_9ssp" />

            <TextView
                style="@style/blackText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wip"
                android:textSize="@dimen/_9ssp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRecyText"
            tools:itemCount="20"
            tools:listitem="@layout/row_monitor_data_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
            style="@style/whiteText"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:textSize="@dimen/_9ssp"
            android:text="@string/total_wip"
            app:layout_constraintEnd_toStartOf="@id/textTotalWip"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTotalWip"
            style="@style/whiteText"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            tools:text="2933"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>