<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.UnitPlantActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/nanum_gothic_bold"
        android:gravity="center"
        android:text="@string/please_select_plant_name_unit_name_and_user_line"
        android:textColor="@color/bg_view_card_data"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_complete"
        style="@style/MaterialButtonGreen"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        android:padding="4dp"
        android:text="@string/complete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        app:boxStrokeColor="@color/grey"
        app:hintEnabled="false"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteUnit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_plant_unit_name"
            android:inputType="none"
            android:paddingVertical="1dp"
            android:textColor="#000000"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        app:boxStrokeColor="@color/grey"
        app:hintEnabled="false"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_user_line"
            android:inputType="none"
            android:paddingVertical="1dp"
            android:textColor="#000000"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        app:boxStrokeColor="@color/grey"
        app:hintEnabled="false"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompletePlant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/select_plant_name"
            android:inputType="none"
            android:paddingVertical="1dp"
            android:textColor="#000000"
            android:textSize="@dimen/_12ssp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>